[package]
name = "hessian_rs"
version = "0.0.2"
authors = ["lynskylate <lynskylate@gmail.com>"]
edition = "2018"
keywords = ["serialization", "hessian2", "serde"]
categories = ["encoding"]
description = "hessian2 codec implemention"
license = "GPL-3.0-or-later"

[dependencies]
ordered-float = "1.0"
byteorder = "1.3.4"
indexmap = "1.4.0"

[dev-dependencies]
maplit = "1.0.2"
