[package]
name = "hessian_rs"
version = "0.0.3"
authors = ["lynskylate <lynskylate@gmail.com>"]
edition = "2018"
exclude = ["tests/fixtures/**/*"]
keywords = ["serialization", "hessian2", "serde"]
categories = ["encoding"]
description = "hessian2 codec implemention"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Lynskylate/serde_hessian"
repository = "https://github.com/Lynskylate/serde_hessian.git"

[[bench]]
name = "hessian_benchmark"
harness = false

[dependencies]
ordered-float = "1.0"
byteorder = "1.3.4"
indexmap = "1.4.0"

[dev-dependencies]
maplit = "1.0.2"
criterion = "0.3.2"
